# kajisuke

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  initial_data.json  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
.devcontainer/: devcontainer.json
apps/: admin.py  apps.py  batch.py  forms.py  models.py  urls.py  urls_mock.py  validators.py  views.py  views_mock.py
apps/management/commands/: runapscheduler.py
apps/migrations/: 0001_initial.py  0002_customuser_is_active.py  0003_remove_schedule_day_of_month.py  0004_insert_initial_data.py
apps/utils/: calendar_utils.py  schedule_utils.py
apps/views/: account_views.py  auth_views.py  calendar_views.py  schedules_complete_views.py  schedules_list_views.py  schedules_views.py
kajisuke/: Dockerfile  asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
nginx/: Dockerfile
nginx/conf.d/: default.conf
static/css/: base.css  base_dev.css  day.css  error404.css  list.css  moedal_base.css  month.css  myaccount.css  reset.css  signin.css  signup.css
static/css/schedules/: create.css  edit_oneday.css  edit_schedules.css  (+1 more)
static/js/: month.js  oneday_edit.js  schedule_complete.js  schedule_edit.js  schedule_form.js
templates/: 404.html  500.html  base.html  myaccount.html  signin.html  signup.html
templates/calendars/: day.html  month.html
templates/dev/: dev.html  hello_world.html  oneday_edit.html  schedule_create.html  schedule_edit.html  signin.html  signup.html
templates/schedules/: create.html  edit_oneday.html  edit_schedules.html  list.html  mordal_base.html
